--- a/tasks/install_buildbot.yml
+++ b/tasks/install_buildbot.yml
@@ -1,10 +1,23 @@
 ---
 - name: Make space for buildslave environment
   file: dest=~/buildbot mode=755 state=directory
+  sudo: no
 
 - name: Get Hostname
   shell: hostname
   register: hostname
+  sudo: no
+
+- name: Check if buildslave is already installed
+  sudo: no
+  stat: path=~/buildbot/sandbox/bin/buildslave
+  register: buildslave
+
+- name: Stop buildbot if it's already running
+  shell: chdir=~/buildbot sandbox/bin/buildslave stop slave
+  when: buildslave.stat.exists == True
+  ignore_errors: yes
+  sudo: no
 
 - name: Check if buildslave is already installed
   stat: path=~/buildbot/sandbox/bin/buildslave
@@ -16,21 +29,27 @@
 
 - name: Install virtualenv to ~/buildbot/sandbox
   shell: chdir=~/buildbot virtualenv --no-site-packages sandbox
+  sudo: no
 
 - name: Install buildbot-slave to ~/buildbot/sandbox
   pip: name=buildbot-slave virtualenv=~/buildbot/sandbox state=latest
+  sudo: no
 
 - name: Configure buildslave
   shell: chdir=~/buildbot sandbox/bin/buildslave create-slave --keepalive=100 --umask 022 slave {{buildbot_server}}:{{buildbot_port}} {{hostname.stdout}} {{buildbot_password}}
+  sudo: no
 
 - name: Set buildslave admin info
   copy: dest=~/buildbot/slave/info/admin content="Elliot Saba <staticfloat@gmail.com>"
+  sudo: no
 
 - name: Set buildslave host info
   copy: dest=~/buildbot/slave/info/host content="Julia {{hostname.stdout}} buildslave"
+  sudo: no
 
 - name: Setup buildslave cron autostart
   cron: reboot=yes name="Start buildslave" job="cd $(echo ~)/buildbot; sandbox/bin/buildslave start slave &"
 
 - name: Start buildslave
   shell: chdir=~/buildbot sandbox/bin/buildslave start slave
+  sudo: no
