--- a/tasks/install_buildbot.yml
+++ b/tasks/install_buildbot.yml
@@ -22,10 +22,12 @@
 - name: Check if buildslave is already installed
   stat: path=~/buildbot/sandbox/bin/buildslave
   register: buildslave
+  sudo: no
 
 - name: Stop buildbot if it's already running
   shell: chdir=~/buildbot sandbox/bin/buildslave stop slave
   when: buildslave.stat.exists == True
+  sudo: no
 
 - name: Install virtualenv to ~/buildbot/sandbox
   shell: chdir=~/buildbot virtualenv --no-site-packages sandbox
@@ -49,6 +51,7 @@
 
 - name: Setup buildslave cron autostart
   cron: reboot=yes name="Start buildslave" job="cd $(echo ~)/buildbot; sandbox/bin/buildslave start slave &"
+  sudo: no
 
 - name: Start buildslave
   shell: chdir=~/buildbot sandbox/bin/buildslave start slave
