Now works with Windows and OSX, get OSX ready for automatic keychain shenanigans!

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 buildbot_server: buildbot.e.ip.saba.us
 buildbot_port: 9989
+
+osx_keychain_password: "please override me"
+osx_codesign_key_password: "please override me"
