add libssl-dev to fix https://github.com/staticfloat/julia-buildbot/issues/34

--- a/tasks/packages_apt.yml
+++ b/tasks/packages_apt.yml
@@ -31,6 +31,7 @@
     - devscripts
     - linux-headers-{{unamer.stdout}}
     - ccache
+    - libssl-dev
 
     # Needed because they're awesome
     - htop
