--- a/tasks/packages_apt.yml
+++ b/tasks/packages_apt.yml
@@ -32,6 +32,7 @@
     - linux-headers-{{unamer.stdout}}
     - ccache
     - libssl-dev
+    - libedit-dev
 
     # Needed because they're awesome
     - htop
