--- a/tasks/misc.yml
+++ b/tasks/misc.yml
@@ -16,7 +16,7 @@
   register: distribution
 
 - name: Calculate distribution version
-  command: echo {{ansible_distribution_version | lower | regex_replace('^(\d+\.\d+).*', '\\1') | regex_replace('na', '')}}{{ansible_system | lower | regex_replace('darwin', '') | regex_replace('linux', '') | regex_replace('(cygwin|msys)_nt-(\d+\.\d+)(-wow)?', '\\2')}}
+  command: echo {{ansible_distribution_version | lower | regex_replace('^(\d+\.\d+).*' | regex_escape(), '\\1') | regex_replace('na', '')}}{{ansible_system | lower | regex_replace('darwin', '') | regex_replace('linux', '') | regex_replace('(cygwin|msys)_nt-(\d+\.\d+)(-wow)?', '\\2')}}
   register: distribution_version
 
 - name: Calculate proctype
